--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<link rel="stylesheet" href="styles/css/style.css">
 	<title>Angular1-lessons</title>
 </head>
-<body>
+<body ng-controller = "myData">
 <div class="page-header row">
-	<h1 class="columns small-6">To-Do List</h1>
+	<h1 class="columns small-6">{{myData.user}}'s to-do List</h1>
 </div>
 <div class="row">
 	<table class="hover columns small-12 large-12">
@@ -18,7 +18,12 @@
 			<th>Done</th>
 		</tr>
 	</thead>
-	<tbody></tbody>
+	<tbody>
+		<tr ng-repeat="item in myData.items">
+			<td ng-bind="item.action"></td>
+			<td ng-bind="item.done"></td>
+		</tr>
+	</tbody>
 	</table>
 </div>
 
