--- a/index.html
+++ b/index.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
-<html lang="en" ng-app = "angular-lessons">
+<html lang="en" data-ng-app = "angular-lessons">
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="bower_components/foundation/css/foundation.min.css">
 	<link rel="stylesheet" href="styles/css/style.css">
 	<title>Angular1-lessons</title>
 </head>
-<body ng-controller = "myData">
+<body data-ng-controller = "myData" data-ng-cloak> 
 <div class="page-header row">
-	<h1 class="columns small-6">{{myData.user}}'s to-do List</h1>
+	<h1 class="columns small-12">{{::myData.user}}'s to-do List 
+	  <span class="secondary label" 
+	        data-ng-hide="!incompleteCount(myData.items)"
+	        data-ng-class="{'warning': incompleteCount(myData.items) === 'All incompleted'}">All notes: {{incompleteCount(myData.items)}}</span>
+	</h1>
+	
 </div>
 <div class="row">
 	<table class="hover columns small-12 large-12">
 	<thead>
 		<tr>
+		    <th>Checked</th>
 			<th>Description</th>
 			<th>Done</th>
 		</tr>
 	</thead>
 	<tbody>
-		<tr ng-repeat="item in myData.items">
-			<td ng-bind="item.action"></td>
-			<td ng-bind="item.done"></td>
+		<tr data-ng-repeat="item in myData.items">
+		    <td><input type="checkbox" ng-model="item.done"></td>
+			<td data-ng-bind="item.action"></td>
+			<td data-ng-class="{'red' : !item.done, 'lime' : item.done}" data-ng-bind="item.done ? 'Yes' : 'No'"></td>
 		</tr>
 	</tbody>
 	</table>
+	<button type="button" class="small button" data-ng-click="myData.add('Something')">Add</button>
 </div>
 
 		<script src="bower_components/angular/angular.min.js"></script>
