--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="bower_components/foundation/css/foundation.min.css">
+	<link rel="stylesheet" href="bower_components/foundation-sites/dist/foundation.css">
 	<link rel="stylesheet" href="styles/css/style.css">
 	<title>Angular1-lessons</title>
 </head>
@@ -13,7 +13,7 @@
 		<h1 class="columns small-6">{{::myData.user}}'s to-do List 
 		</h1>
 		<div class="columns small-6 label-container"
-			 data-ng-hide="!incompleteCount(myData.items)">
+			 data-ng-if="incompleteCount(myData.items)">
 		Remaining notes: 
 			<span class="text-right label round " 
 				data-ng-class="warningLevel(myData.items)">{{incompleteCount(myData.items)}}
@@ -23,12 +23,20 @@
 	<div class="container">
 		<div class="row">
 			<div class="large-6 medium-8 small-12 columns">
-				<label for="addDescription" class="text-right middle">Add Description</label>
-				<input type="text" id="addDescription" ng-model="newItem.action">
-				<button class="small button" 
-						type="button" 
-						data-ng-click="addNewItem(myData.items, newItem)"
-						ng-disabled="!newItem.action">Add</button>
+			    <div class="input-group">
+                    <span class="input-group-label">Add Description</span>
+                    <input type="text" 
+                         id="addDescription" 
+                         ng-model="newItem.action"
+                         class="input-group-field">
+                    <div class="input-group-button">
+                        <input type="submit" 
+                               ng-disabled="!newItem.action"
+                               data-ng-click="addNewItem(myData.items, newItem)"
+                               class="button"
+                               value="Add">
+                    </div>
+			    </div>
 			</div>
 		</div>
 		<div class="row">
@@ -36,22 +44,31 @@
 				<table>
 					<thead>
 						<tr>
-							<th>Checked</th>
+							<th width="100">Checked</th>
 							<th>Description</th>
 							<th>Done</th>
 						</tr>
 					</thead>
 					<tbody>
-						<tr data-ng-repeat="item in myData.items">
+						<tr data-ng-repeat="item in myData.items | checkedItems: showComplete | orderBy: 'action'">
 							<td>
-								<input type="checkbox" ng-model="item.done">
+								<input type="checkbox" ng-model="item.done" >
 							</td>
-							<td data-ng-bind="item.action"></td>
+							<td data-ng-bind="item.action"
+							    ng-class="{'done': item.done}">
+				            </td>
 							<td data-ng-class="{'red' : !item.done, 'lime' : item.done}" data-ng-bind="item.done ? 'Yes' : 'No'"></td>
 						</tr>
 					</tbody>
 				</table>
 			</div>
+		</div>
+		<div class="row">
+		    <div class="small-6 columns">
+                <span>Show complete</span>
+		        <input type="checkbox"  ng-model="showComplete">
+		        
+		    </div>
 		</div>
 	</div>
 	<script src="bower_components/angular/angular.min.js"></script>
