--- a/index.html
+++ b/index.html
@@ -50,14 +50,15 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr data-ng-repeat="item in myData.items | checkedItems: showComplete | orderBy: 'action'">
+						<tr data-ng-repeat="item in myData.items | checkedItems: showComplete | orderBy: 'action'"
+							data-ng-class="{'done-color' : item.done}">
 							<td>
 								<input type="checkbox" ng-model="item.done" >
 							</td>
 							<td data-ng-bind="item.action"
 							    ng-class="{'done': item.done}">
 				            </td>
-							<td data-ng-class="{'red' : !item.done, 'lime' : item.done}" data-ng-bind="item.done ? 'Yes' : 'No'"></td>
+							<td  data-ng-bind="item.done ? 'Yes' : 'No'"></td>
 						</tr>
 					</tbody>
 				</table>
