--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 			<div class="large-6 medium-8 small-12 columns">
 			    <div class="input-group" task-form></div>
 			</div>
+			<div class="large-6 medium-4 small-12 columns" ng-controller="Day">
+			    <div class="today">Today is <span data-ng-bind="today" hightlight></span></div>
+			</div>
 		</div>
 		<div class="row">
 			<div class="small-12 columns">
@@ -25,12 +28,13 @@
 		    <div class="small-6 columns">
                 <span>Show complete</span>
 		        <input type="checkbox"  ng-model="showComplete">
-		        
 		    </div>
 		</div>
 	</div>
 	<script src="bower_components/angular/angular.min.js"></script>
 	<script src="js/app.js"></script>
+	<script src="js/day.controller.js"></script>
+	<script src="js/highLight.directive.js"></script>
 </body>
 
 </html>
