--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			    <div class="input-group" task-form></div>
 			</div>
 			<div class="large-6 medium-4 small-12 columns" ng-controller="Day">
-			    <div class="today">Today is <span data-ng-bind="today" hightlight></span></div>
+			    <div class="today">Today is <span data-ng-bind="today | dayName" hightlight></span></div>
 			</div>
 		</div>
 		<div class="row">
@@ -35,6 +35,8 @@
 	<script src="js/app.js"></script>
 	<script src="js/day.controller.js"></script>
 	<script src="js/highLight.directive.js"></script>
+	<script src="js/dayName.filter.js"></script>
+	<script src="js/days.service.js"></script>
 </body>
 
 </html>
