add new service

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 	<script src="js/day.controller.js"></script>
 	<script src="js/highLight.directive.js"></script>
 	<script src="js/dayName.filter.js"></script>
-	<script src="js/days.service.js"></script>
+	
+	<script src="js/getDay.service.js"></script>
 </body>
 
 </html>
