--- a/form.html
+++ b/form.html
@@ -1,5 +1,13 @@
-<span class="input-group-label">Add Description</span>
-<input type="text" id="addDescription" ng-model="newItem.action" class="input-group-field">
-<div class="input-group-button">
-    <input type="submit" ng-disabled="!newItem.action" data-ng-click="addNewItem(myData.items, newItem)" class="button" value="Add">
-</div>
+
+<form action="">
+	<span class="input-group-label">Add Description</span>
+	<input type="text" id="addDescription" ng-model="newItem.action" class="input-group-field">
+	<div class="input-group-button">
+   	 	<input type="submit" ng-disabled="!newItem.action" data-ng-click="addNewItem(myData.items, newItem)" class="button" value="Add">
+	</div>
+	<span class="input-group-label">Choose Day</span>
+	<select name="" id="">
+		<option ng-repeat="day in myData.days" value="{{day}}">{{day}}</option>
+	</select>
+</form>
+
