--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 	<main-header></main-header>
 	<div class="container">
 		<div class="row">
-			<div class="large-6 medium-8 small-12 columns">
+			<form class="large-6 medium-8 small-12 columns">
 			    <div class="input-group" task-form></div>
-			</div>
+			</form>
 			<div class="large-6 medium-4 small-12 columns" ng-controller="Day">
 			    <div class="today">Today is <span data-ng-bind="today | dayName" hightlight></span></div>
 			</div>
@@ -32,7 +32,9 @@
 		</div>
 	</div>
 	<script src="bower_components/angular/angular.min.js"></script>
+	
 	<script src="js/app.js"></script>
+	<script src="js/services/services.js"></script>
 	<script src="js/day.controller.js"></script>
 	<script src="js/highLight.directive.js"></script>
 	<script src="js/dayName.filter.js"></script>
