--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 	<script src="js/app.js"></script>
 	<script src="js/services/services.js"></script>
 	<script src="js/day.controller.js"></script>
+	<script src="js/name.controller.js"></script>
 	<script src="js/highLight.directive.js"></script>
 	<script src="js/dayName.filter.js"></script>
 	<script src="js/days.service.js"></script>
