--- a/form.html
+++ b/form.html
@@ -1,5 +1,5 @@
 <span class="input-group-label">Add Description</span>
 <input type="text" id="addDescription" ng-model="newItem.action" class="input-group-field">
 <div class="input-group-button">
-    <input type="submit" ng-disabled="!newItem.action" data-ng-click="addNewItem(myData.items, newItem)" class="button" value="Add">
+    <input type="submit" data-ng-disabled="!newItem.action" data-ng-click="addNewItem(myData.items, newItem)" class="button" value="Add">
 </div>
