--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div class="large-6 medium-8 small-12 columns">
 			    <div class="input-group" task-form></div>
 			</div>
-			<div class="large-6 medium-4 small-12 columns" ng-controller="Day">
+			<div class="large-6 medium-4 small-12 columns" ng-controller="day">
 			    <div class="today">Today is <span data-ng-bind="today | dayName" hightlight></span></div>
 			</div>
 		</div>
@@ -32,12 +32,12 @@
 		</div>
 	</div>
 	<script src="bower_components/angular/angular.min.js"></script>
+	<script src="js/services/services.js"></script>
 	<script src="js/app.js"></script>
+	<script src="js/controllers/user.controller.js"></script>
 	<script src="js/day.controller.js"></script>
 	<script src="js/highLight.directive.js"></script>
 	<script src="js/dayName.filter.js"></script>
-	
-	<script src="js/getDay.service.js"></script>
 </body>
 
 </html>
