--- a/header.html
+++ b/header.html
@@ -3,15 +3,15 @@
     </h1>
     <form action="" class="columns small-4">
         <div class="input-group">
-           <span class="input-group-label">Add Name</span>
+           <span class="input-group-label">Add {{Me}}</span>
             <input type="text" ng-model="newName">
             <div class="input-group-button">
-                <input type="submit" ng-disabled="!newName" data-ng-click="setName(newName)" class="button" value="Add">
+                <input type="submit" ng-disabled="!newName" data-ng-click="setName(newName, $event)" class="button" value="Add">
             </div>
         </div>
 
     </form>
-    <div class="columns small-3 label-container" data-ng-if="incompleteCount(myData.items)">
+    <div class="columns small-3 label-container {{colors.red}}" data-ng-if="incompleteCount(myData.items)">
         Remaining notes:
         <span class="text-right label round " data-ng-class="warningLevel(myData.items)">{{incompleteCount(myData.items)}}
         </span>
